Add nodemon pkg

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/carlosmoshudev/Discord-CatBotJS#readme",
   "dependencies": {
     "discord.js": "^14.3.0",
-    "dotenv": "^16.0.2"
+    "dotenv": "^16.0.2",
+    "nodemon": "^2.0.19"
   }
 }
