--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "catbot-js",
-  "version": "2.0.6",
+  "version": "PRE-2.0.12",
   "description": "",
   "main": "index.js",
   "scripts": {
