--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "catbot-js",
-  "version": "PRE-2.0.17",
+  "version": "PRE-2.0.18",
   "description": "Bot para discord multipropósito en Discord.js v14.3 y node.js",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js | pino-pretty -i pid,hostname -t 'yyyy-mm-dd HH:MM:ss'"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,13 @@
   },
   "homepage": "https://github.com/carlosmoshudev/Discord-CatBotJS#readme",
   "dependencies": {
+    "@discordjs/rest": "^1.1.0",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "pino": "^7.0.0-rc.9"
+  },
+  "devDependencies": {
+    "eslint": "^8.23.0"
   }
 }
