--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "PRE-2.0.18",
   "description": "Bot para discord multipropósito en Discord.js v14.3 y node.js",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "nodemon index.js",
     "dev": "nodemon index.js | pino-pretty -i pid,hostname -t 'yyyy-mm-dd HH:MM:ss'"
@@ -21,10 +22,11 @@
     "@discordjs/rest": "^1.1.0",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
-    "nodemon": "^2.0.19",
     "pino": "^7.0.0-rc.9"
   },
   "devDependencies": {
+    "nodemon": "^2.0.19",
+    "pino": "^7.0.0-rc.9",
     "eslint": "^8.23.0"
   }
 }
