--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 log.json
-.Logs/*
+src/.Logs/*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -109,5 +109,7 @@ dist
 .vscode
 
 #Developer
-.DevCommands/*
-.WorkingProgress/*
+src/.DevCommands/*
+src/.WorkingProgress/*
+
+tsconfig.json
