--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js | pino-pretty -i pid,hostname -t 'yyyy-mm-dd HH:MM:ss'"
+    "start": "nodemon src/index.ts",
+    "dev": "nodemon src/index.ts | pino-pretty -i pid,hostname -t 'yyyy-mm-dd HH:MM:ss'"
   },
   "repository": {
     "type": "git",
@@ -19,14 +19,19 @@
   },
   "homepage": "https://github.com/carlosmoshudev/Discord-CatBotJS#readme",
   "dependencies": {
-    "@discordjs/rest": "^1.1.0",
-    "discord.js": "^14.3.0",
-    "dotenv": "^16.0.2",
-    "pino": "^7.0.0-rc.9"
+    "@discordjs/rest": "1.1.0",
+    "discord.js": "14.3.0",
+    "dotenv": "16.0.2",
+    "pino": "7.0.0-rc.9"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19",
-    "pino": "^7.0.0-rc.9",
-    "eslint": "^8.23.0"
+    "@types/express": "4.17.14",
+    "@types/express-handlebars": "^6.0.0",
+    "@types/node": "18.7.18",
+    "eslint": "8.23.0",
+    "nodemon": "2.0.19",
+    "pino": "7.0.0-rc.9",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.3"
   }
 }
