--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "catbot-js",
-  "version": "PRE-2.0.19",
+  "version": "PRE-2.0.23",
   "description": "Bot para discord multipropósito en Discord.js v14.3 y node.js",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon src/index.ts",
-    "dev": "nodemon src/index.ts | pino-pretty -i pid,hostname -t 'yyyy-mm-dd HH:MM:ss'"
+    "start": "node build/src/index.js",
+    "dev": "nodemon src/index.ts | pino-pretty -i pid,hostname -t 'yyyy-mm-dd HH:MM:ss'",
+    "lint": "ts-standard",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,17 +23,26 @@
   "dependencies": {
     "@discordjs/rest": "1.1.0",
     "discord.js": "14.3.0",
-    "dotenv": "16.0.2",
-    "pino": "7.0.0-rc.9"
+    "typescript-eslint": "^0.0.1-alpha.0"
   },
   "devDependencies": {
     "@types/express": "4.17.14",
-    "@types/express-handlebars": "^6.0.0",
+    "@types/express-handlebars": "6.0.0",
     "@types/node": "18.7.18",
+    "dotenv": "16.0.2",
     "eslint": "8.23.0",
     "nodemon": "2.0.19",
     "pino": "7.0.0-rc.9",
     "ts-node": "10.9.1",
+    "ts-standard": "^11.0.0",
     "typescript": "4.8.3"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "project": "tsconfig.json"
+    },
+    "extends": [
+      "./node_modules/ts-standard/eslintrc.json"
+    ]
   }
 }
