--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "catbot-js",
-  "version": "PRE-2.0.23",
+  "version": "PRE-2.0.25",
   "description": "Bot para discord multipropósito en Discord.js v14.3 y node.js",
   "main": "index.js",
   "type": "commonjs",
@@ -34,7 +34,7 @@
     "nodemon": "2.0.19",
     "pino": "7.0.0-rc.9",
     "ts-node": "10.9.1",
-    "ts-standard": "^11.0.0",
+    "ts-standard": "11.0.0",
     "typescript": "4.8.3"
   },
   "eslintConfig": {
