--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "18.7.18",
     "dotenv": "16.0.2",
     "eslint": "8.23.0",
+    "jest": "^29.0.3",
     "nodemon": "2.0.19",
     "pino": "7.0.0-rc.9",
     "ts-node": "10.9.1",
