--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "catbot-js",
-  "version": "PRE-2.0.25",
+  "version": "PRE-2.1.0",
   "description": "Bot para discord multipropósito en Discord.js v14.3 y node.js",
   "main": "index.js",
   "type": "commonjs",
@@ -21,9 +21,7 @@
   },
   "homepage": "https://github.com/carlosmoshudev/Discord-CatBotJS#readme",
   "dependencies": {
-    "@discordjs/rest": "1.1.0",
-    "discord.js": "14.3.0",
-    "typescript-eslint": "^0.0.1-alpha.0"
+    "discord.js": "14.3.0"
   },
   "devDependencies": {
     "@types/express": "4.17.14",
@@ -36,7 +34,8 @@
     "pino": "7.0.0-rc.9",
     "ts-node": "10.9.1",
     "ts-standard": "11.0.0",
-    "typescript": "4.8.3"
+    "typescript": "4.8.3",
+    "typescript-eslint": "^0.0.1-alpha.0"
   },
   "eslintConfig": {
     "parserOptions": {
