--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "16.0.2",
     "eslint": "8.23.0",
     "jest": "29.0.3",
+    "node-fetch": "2.6.7",
     "nodemon": "2.0.19",
     "pino": "7.0.0-rc.9",
     "ts-node": "10.9.1",
